Create HTML table for boats in listings.html

--- a/listings/templates/listings/listings.html
+++ b/listings/templates/listings/listings.html
@@ -60,7 +60,7 @@ Listings Template
                     View listing
                 </td>
                 <td>
-                    Click here to view
+                    <a href="{% url 'boat_listing_details' listing.pk %}">Click here to view</a>
                 </td>
             </tr>
         </table>
