--- a/listings/templates/listings/base.html
+++ b/listings/templates/listings/base.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static%}
     {% load humanize %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}"> </link>
     {% block head %}
     {% endblock %}
 </head>
