--- a/listings/templates/listings/base.html
+++ b/listings/templates/listings/base.html
@@ -7,6 +7,7 @@
     {% load static%}
     {% load humanize %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}"> </link>
+    <link rel="stylesheet" href="https://use.typekit.net/vrz6cku.css">
     {% block head %}
     {% endblock %}
 </head>
