Add extra detail sections to listing_details.html

--- a/listings/templates/listings/base.html
+++ b/listings/templates/listings/base.html
@@ -20,7 +20,7 @@
             <a href="#" id="sell-nav">Sell</a>
         </nav>
         <a href="#" id="logo-nav">
-            <image id="nav-logo" src="/images/logo.svg" alt="Next Boat Logo">
+            <image id="nav-logo" src="{% static 'images/logo.svg' %}" alt="Next Boat Logo">
         </a>
         <div role="button" id="burger-profile-icon">
 
