Update listing_details.css with new styles and checkbox icon for lists

--- a/listings/templates/listings/listing_details.html
+++ b/listings/templates/listings/listing_details.html
@@ -99,11 +99,13 @@
             <h3 class="listing-details-h3">Features</h3>
             <div class="particulars-card">
                 <!--This code snippet is from Stackoverflow user artem https://stackoverflow.com/questions/8317537/django-templates-split-string-to-array-->
-                {% with listing.boat_feature_list|split:"\*" as features %}
-                    {% for feature in features %}
-                        {{ feature }}<br>
-                    {% endfor %}
-                {% endwith %}
+                <div id="features-flex">
+                    {% with listing.boat_feature_list|split:"\*" as features %}
+                        {% for feature in features %}
+                        <span class="listing-details-feature">{{ feature }}</span>
+                        {% endfor %}
+                    {% endwith %}
+                </div>
             </div>
         </div>
     </div>
