Update listing_details.html to include contact, share, fav buttons

--- a/listings/templates/listings/listing_details.html
+++ b/listings/templates/listings/listing_details.html
@@ -26,6 +26,14 @@
             {% endfor %}
         </div>
     </div>
+    <div id="interested-cont">
+        <div id="favourite-button" role="button"></div>
+        <div id="contact-seller-cont">
+            <span id="contact-seller-label">Interested in this boat?</span>
+            <a href="#" id="contact-button-a"><div id="contact-seller-button"><span>Contact Seller</span></div></a>
+        </div>
+        <div id="share-button" role="button"></div>
+    </div>
     <div id="listing-details-flex">
         <div id="listing-particulars-col">
             <h3 class="listing-details-h3">Overview</h3>
