--- a/listings/templates/listings/base.html
+++ b/listings/templates/listings/base.html
@@ -22,13 +22,37 @@
         <a href="#" id="logo-nav">
             <image id="nav-logo" src="{% static 'images/logo.svg' %}" alt="Next Boat Logo">
         </a>
-        <div role="button" id="burger-profile-icon">
-
+        <div role="button" role="button" id="menu-button">
+            <img id="menu-button-icon" alt="" src="{% static 'images/user_menu_icon_484848.svg' %}">
+            <img id="menu-button-icon-close" alt="" src="{% static 'images/menu_close_icon_484848.svg' %}">
         </div>
     </div>
-</div>    
+</div> 
+<div id="menu-spacer">
+    <div id="menu-container">
+        <ul>
+            {% if user.is_authenticated %}
+            <li><a href="{% url 'account_logout' %}"><span id="logout-text">Logout</span></a></li>
+            <li><a href="#"><span id="account-text">Account Settings</span></a></li>
+            <li><a href="#"><span id="message-centre-text">Message Centre</span></a></li>
+            <li><a href="#"><span id="favourite-text">Favourites</span></a></li>
+            <li><a href="#"><span id="your-listings-text">Your Listings</span></a></li>
+            <li><a href="#"><span id="new-listing-text">New Listing</span></a></li>
+            {% else %}
+            <li><a href="{% url 'account_login' %}"><span id="login-text">Login</span></a></li>
+            <li><a href="{% url 'account_signup' %}"><span id="signup-text">Create account</span></a></li>
+            {% endif %}
+        </ul>
+    </div>
+</div>   
 {% block content %}
 {% endblock %}
 
+<footer>
+
+</footer>
+<script src="{% static 'javascript/base.js' %}"></script>
+{% block footerscripts %}
+{% endblock %}
 </body>
 </html>
