Update base.html and urls.py with links in nav bar so they function

--- a/listings/templates/listings/base.html
+++ b/listings/templates/listings/base.html
@@ -15,11 +15,11 @@
 <div id="nav-bar-container">
     <div id="nav-bar">
         <nav id="buy-sell-nav">
-            <a href="#" id="buy-nav">Buy</a>
+            <a href="{% url 'boat_listings' %}" id="buy-nav">Buy</a>
             <div id="nav-divider"></div>
             <a href="#" id="sell-nav">Sell</a>
         </nav>
-        <a href="#" id="logo-nav">
+        <a href="{% url 'home' %}" id="logo-nav">
             <image id="nav-logo" src="{% static 'images/logo.svg' %}" alt="Next Boat Logo">
         </a>
         <div role="button" role="button" id="menu-button">
