--- a/listings/templates/listings/listing_create_form.html
+++ b/listings/templates/listings/listing_create_form.html
@@ -1,9 +1,22 @@
 {% extends "listings/base.html" %}
 
 {% block content %}
-<form action="" method="POST">
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Submit"/>
+  {{ listing_create_form.as_p }}
+  <input type="submit" value="Submit Form 1">
 </form>
+
+<form method="post">
+  {% csrf_token %}
+  {{ listing_media_form.as_p }}
+  <input type="submit" value="Submit Form 2">
+</form>
+
 {% endblock %}
