--- a/listings/templates/listings/listing_create_form.html
+++ b/listings/templates/listings/listing_create_form.html
@@ -7,16 +7,21 @@
 <br>
 <br>
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
   {% csrf_token %}
-  {{ listing_create_form.as_p }}
-  <input type="submit" value="Submit Form 1">
-</form>
 
-<form method="post">
-  {% csrf_token %}
+  <!-- {% if listing_create_form.errors %}
+    {% for key, value in listing_create_form.errors.items %}
+      {{key|escape}}<br>
+      {{value|escape}}
+    {% endfor %}
+  {% endif %} -->
+  
+  {{ listing_create_form.as_p }}
+  
   {{ listing_media_form.as_p }}
-  <input type="submit" value="Submit Form 2">
+  <!-- <input type="submit" value="Submit Form 2"> -->
+  <button type="submit">Submit Form</button>
 </form>
 
 {% endblock %}
